Update Google screenshot; add Wikipedia; other minor updates.

--- a/content.html
+++ b/content.html
@@ -77,7 +77,7 @@ day day up
                 <section class="has-dark-background" data-background-color="#000000">
                     <div class="sl-block" data-block-type="iframe" style="min-width: 30px; min-height: 30px; width: 960px; height: 700px; left: 0px; top: 0px;">
                         <div class="sl-block-content" style="z-index: 11;">
-                            <iframe webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-pointer-lock" data-src="https://player.vimeo.com/video/138040186?autoplay=1&amp;loop=1&amp;title=0&amp;byline=0&amp;portrait=0"></iframe>
+                            <iframe webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-pointer-lock" data-src="https://player.vimeo.com/video/138040186?autoplay=1&amp;loop=1&amp;title=0&amp;byline=0&amp;portrait=0&amp;api=1"></iframe>
                         </div>
                     </div>
                 </section>
@@ -492,18 +492,6 @@ in a Box
                         </div>
                     </div>
                 </section>
-                <section>
-                    <div class="sl-block" data-block-type="text" style="width: 800px; left: 80px; top: 190px; height: auto;">
-                        <div class="sl-block-content">
-                            <h1>Title Text</h1>
-                        </div>
-                    </div>
-                    <div class="sl-block" data-block-type="text" style="width: 800px; left: 80px; top: 287px; height: auto;">
-                        <div class="sl-block-content">
-                            <h2>Subtitle</h2>
-                        </div>
-                    </div>
-                </section>
             </section>
             <section>
                 <div class="sl-block" data-block-type="text" style="width: 800px; left: 80px; top: 210px; height: auto;">
@@ -536,9 +524,14 @@ in a Box
                     </div>
                 </section>
                 <section class="has-light-background" data-background-color="#ffffff">
-                    <div class="sl-block" data-block-type="image" style="min-width: 30px; min-height: 30px; width: 640px; height: 241.489001692047px; left: 160px; top: 210px;">
-                        <div class="sl-block-content" style="z-index: 0;">
-                            <img style="" data-natural-width="591" data-natural-height="223" data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/364347/images/1670976/google.png"/>
+                    <div class="sl-block" data-block-type="image" style="min-width: 30px; min-height: 30px; width: 533.756756756757px; height: 227px; left: 213px; top: 238px;">
+                        <div class="sl-block-content" style="z-index: 11;">
+                            <img style="" data-natural-width="609" data-natural-height="259" data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/364347/images/1686911/google.png"/>
+                        </div>
+                    </div>
+                    <div class="sl-block" data-block-type="image" style="min-width: 30px; min-height: 30px; width: 360px; height: 207.9px; left: 300px; top: 143px;">
+                        <div class="sl-block-content" style="z-index: 12;">
+                            <img style="" data-natural-width="400" data-natural-height="231" data-src="https://s3.amazonaws.com/media-p.slid.es/uploads/364347/images/1686927/googles-new-logo.gif"/>
                         </div>
                     </div>
                 </section>
@@ -576,6 +569,13 @@ in a Box
                 <section data-background-image="https://s3.amazonaws.com/media-p.slid.es/uploads/364347/images/1671321/stackoverflow.png" data-background-size="contain"></section>
                 <section data-background-image="https://s3.amazonaws.com/media-p.slid.es/uploads/364347/images/1671393/github.png" data-background-size="contain"></section>
                 <section>
+                    <div class="sl-block" data-block-type="iframe" style="min-width: 30px; min-height: 30px; width: 960px; height: 700px; left: 0px; top: 0px;">
+                        <div class="sl-block-content" style="z-index: 11;">
+                            <iframe webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" sandbox="allow-forms allow-scripts allow-popups allow-same-origin allow-pointer-lock" data-src="https://en.wikipedia.org/wiki/OpenID_Connect"></iframe>
+                        </div>
+                    </div>
+                </section>
+                <section>
                     <div class="sl-block" data-block-type="text" style="width: 800px; left: 80px; top: 253px; height: auto;">
                         <div class="sl-block-content">
                             <h1>翻墙！</h1>
@@ -584,7 +584,7 @@ in a Box
                     <div class="sl-block" data-block-type="text" style="width: 800px; left: 80px; top: 385px; height: auto;">
                         <div class="sl-block-content">
                             <h3>
-                                <span style="font-size:1.4em">□□□</span>（此处删去352字）
+                                <span style="font-size:1.4em">□□□</span>（此处删去1984字）
                             </h3>
                         </div>
                     </div>
